# cookiecutter

./: cookiecutter.json
{{cookiecutter.folder_name}}/: pyproject.toml
