[tool.poetry]
name = "template"
version = "0.1.0"
description = "Template for project"
authors = ["OUEDRAOGO Najibe Jean Jacques <najibe252@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Hydra = "^2.5"
black = "^23.1.0"
interrogate = "^1.5.0"
pre-commit = "^3.1.1"
flake8 = "^6.0.0"
isort = "^5.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
